syntax = "proto3";

message OnionDb {
  // Magic Bytes. Should always be 0xDB followed by the version number
  bytes magic_bytes = 1;

  // Database version number. Higher value means newer database (usually a UNIX Epoch)
  int64 db_version = 2;

  // Version of the Tor Onionoo dataset used to build the database. Takes the form of a UNIX Epoch.
  int64 tor_dir_version = 3;

  // Version of the IPFire location.db file used to build the address ranges. If provided, is a UNIX Epoch otherwise all v*_range fields will be empty.
  optional int64 geo_dir_version = 4;

  // Onionoo Dataset license expression. If null no license data was provided/could be found.
  optional string tor_license = 5;

  // location.db Dataset license expression. If null no license data was provided/could be found.
  optional string geo_license = 6;

  repeated OnionDbCountry countries = 7;
}

message OnionDbCountry {
  string country_code = 1;
  string country_name = 2;
  string country_name_local = 3;

  uint32 total_node_count = 4;
  uint32 entry_node_count = 5;
  uint32 exit_node_count = 6;
  uint32 fast_node_count = 7;
  uint32 online_node_count = 8;

  repeated AddressRange v4_ranges = 9;
  repeated AddressRange v6_ranges = 10;
}

message AddressRange {
  bytes start = 1;
  bytes end = 2;
}